feat: más texto pa saber que se esta haciendo mal